{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Gameplay",
            "id": "d8c3fe1e-46ff-4799-8143-28b468828215",
            "actions": [
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "b3892bf6-a656-489d-ab10-7bcf4a3ae694",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "VerticalMove",
                    "type": "Value",
                    "id": "7050374a-d5ae-4b6a-8ffe-e5cc9f28bd2f",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "152fe366-40f0-4210-bdc7-c2b3775588fe",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "1D Axis",
                    "id": "0e181b18-0e64-48dc-9128-d15b8d9a5b37",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "bbf32e04-5a42-47dc-870b-c50d650327a3",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "3c9e4bf3-b6ef-405e-bed0-a28ae3783769",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0284c71d-6f3c-4579-be68-c90123a21f54",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "fbf5da64-d19f-4482-81fa-c85f316185ef",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "7a0661ea-9328-40b9-9a69-cc6189ce9245",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a17b7df4-53e0-4d0f-ae89-c483fc9eba21",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "VerticalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}